# gambatte

libgambatte/: CMakeLists.txt
